# lsdcat

./: Cargo.toml  README.md
src/: cli.rs  errors.rs  lsd.rs  main.rs  mod.rs
